--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
   },
   "homepage": "https://github.com/okitan/ink-slack#readme",
   "engines": {
-    "node": "^14.13 || >=16.0.0"
+    "node": ">=20.0.0"
   },
   "devDependencies": {
     "@swc/jest": "0.2.39",
-    "@types/jest": "29.5.14",
+    "@types/jest": "30.0.0",
     "@types/react": "18.3.23",
-    "jest": "29.7.0",
+    "jest": "30.1.3",
     "jsx-slack": "6.1.2",
     "prettier": "3.6.2",
     "tsimp": "2.0.12",
-    "typescript": "5.8.3"
+    "typescript": "5.9.2"
   },
   "dependencies": {
     "ink": "^5.0.0",
@@ -40,6 +40,6 @@
     "react": "^18.2.0"
   },
   "optionalDependencies": {
-    "@slack/types": "^2.8.0"
+    "@slack/types": "^2.16.0"
   }
 }
