--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@swc/jest": "0.2.39",
     "@types/jest": "30.0.0",
-    "@types/react": "18.3.23",
+    "@types/react": "19.1.12",
     "jest": "30.1.3",
     "jsx-slack": "6.1.2",
     "prettier": "3.6.2",
@@ -35,9 +35,11 @@
     "typescript": "5.9.2"
   },
   "dependencies": {
-    "ink": "^5.0.0",
-    "marked-terminal": "^7.0.0",
-    "react": "^18.2.0"
+    "marked-terminal": "^7.0.0"
+  },
+  "peerDependencies": {
+    "react": "^19.0.0",
+    "ink": "^6.0.0"
   },
   "optionalDependencies": {
     "@slack/types": "^2.16.0"
