--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,3 +26,5 @@ jobs:
           cache: npm
       - run: npm ci
       - run: npm test
+        env:
+          CI: false # to avoid fails on snapshot tests
